# financial-app

./: pyproject.toml
.github/workflows/: financial-app.yml  financial_app.yml
financial_app/: main.py
financial_app/common/: database.py  settings.py
financial_app/users/: enums.py  models.py  repositories.py  responses.py  routers.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 26db5ef6acd4_create_users_table.py  935d23431bd6_add_name_on_users_table.py
tests/: conftest.py  test_users.py
